hero_mobile done

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <!-- <header class="header">
         <div class="container">
             <nav class="menu">
                 <a class="link logo" href="index.html"><span class="logo-web-part">Web</span>Studio</a>
@@ -50,7 +50,7 @@
                 </li>
             </ul>
         </div>
-    </header>
+    </header> -->
     <main>
         <!--HERO-->
         <section class="hero">
@@ -60,7 +60,7 @@
             </div>
         </section>
         <!-- ABOUT -->
-        <section class="about section">
+        <!-- <section class="about section">
             <div class="container">
                 <h2 class="visually-hidden">Наши преимущества</h2>
                 <ul class="list about-list">
@@ -102,9 +102,9 @@
                 </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
         <!--what we do-->
-        <section class="what-we-do section">
+        <!-- <section class="what-we-do section">
             <div class="container">
                 <h2 class="title">Чем мы занимаемся</h2>
                 <ul class="we-do-list list">
@@ -122,9 +122,9 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
         <!--TEAM-->
-        <section class="team section">
+        <!-- <section class="team section">
             <div class="container">
                 <h2 class="title">Наша команда</h2>
                 <ul class="team-list list">
@@ -284,8 +284,9 @@
                     </li>
                 </ul>
             </div>
-        </section>
-        <section class="section">
+        </section> -->
+    <!--CLIENTS-->
+        <!-- <section class="section">
             <div class="container">
                 <h2 class="title">Постоянные клиенты</h2>
                 <ul class="clients-list list">
@@ -334,9 +335,9 @@
                 </ul>
             </div>
         </section>
-    </main>
+    </main> -->
         <!--FOOTER-->
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container">
             <div class="internal-links">
                 <a class="link logo logo-footer" href="index.html"><span class="logo-web-part">Web</span>Studio</a>
@@ -403,9 +404,9 @@
                 </form>
             </div>
         </div>
-    </footer>
+    </footer> -->
     <!--Modal-->
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <form class="modal-form" action="#">
                 <p class="modal-form-name">Оставьте свои данные, мы вам перезвоним</p>
@@ -445,7 +446,7 @@
                 </svg>
             </button>
         </div>
-    </div>
+    </div> -->
     <script src="./js/modal.js"></script>
 </body>
 </html>
