--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./CSS/main.min.css">
-    <!-- <link rel="stylesheet" href="./CSS/styles.css"> -->
 </head>
 
 <body>
@@ -60,7 +59,7 @@
             </div>
         </section>
         <!-- ABOUT -->
-        <!-- <section class="about section">
+        <section class="about section">
             <div class="container">
                 <h2 class="visually-hidden">Наши преимущества</h2>
                 <ul class="list about-list">
@@ -102,7 +101,7 @@
                 </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
         <!--what we do-->
         <!-- <section class="what-we-do section">
             <div class="container">
