adaptive team section done

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </div>
         </section>
         <!--what we do-->
-        <!-- <section class="what-we-do section">
+        <section class="what-we-do section">
             <div class="container">
                 <h2 class="title">Чем мы занимаемся</h2>
                 <ul class="we-do-list list">
@@ -121,15 +121,34 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
         <!--TEAM-->
-        <!-- <section class="team section">
+        <section class="team section">
             <div class="container">
                 <h2 class="title">Наша команда</h2>
                 <ul class="team-list list">
                     <li class="team-member-card">
                         <div>
-                            <img src="./images/team/Ihor.jpg" width="270" height="260" alt="мужчина в бордовой рубашке и очках">
+                            <picture>
+                                <source srcset="./images/team/desktop/Ihor_desktop.webp 1x, ./images/team/desktop/Ihor_desktop@2x.webp 2x"
+                                    media="(min-width: 1200px)" type="image/webp">
+                                <source 
+                                srcset="./images/team/desktop/Ihor_desktop.jpg 1x, ./images/team/desktop/Ihor_desktop@2x.jpg 2x"
+                                    media="(min-width: 1200px)">
+                                <source srcset="./images/team/tablet/Ihor_tablet.webp 1x, ./images/team/tablet/Ihor_tablet@2x.webp 2x"
+                                    media="(min-width: 768px)" type="image/webp">
+                                <source 
+                                    srcset="./images/team/tablet/Ihor_tablet.jpg 1x, ./images/team/tablet/Ihor_tablet@2x.jpg 2x" 
+                                    media="(min-width: 768px)">
+                                <source srcset="./images/team/tablet/Ihor_mobile.webp 1x, ./images/team/mobile/Ihor_mobile@2x.webp 2x"
+                                    media="(max-width: 767px)" type="image/webp">
+                                <source 
+                                srcset="./images/team/tablet/Ihor_mobile.jpg 1x, ./images/team/mobile/Ihor_mobile@2x.jpg 2x"
+                                    media="(max-width: 767px)">
+                                <img class="team-member-card__image" src="./images/team/mobile/Ihor_mobile.jpg" 
+                                alt="мужчина в бордовой рубашке и очках">
+                            </picture>
+                            
                             <div class="team-member-wrapper">
                                 <h3 class="team-members">Игорь Демьяненко</h3>
                                 <p class="member-porofession" lang="en">Product Designer</p>
@@ -168,7 +187,21 @@
                     </li>
                     <li class="team-member-card">
                         <div>
-                            <img src="./images/team/Olha.jpg" width="270" height="260" alt="блондинка в черном пиджаке">
+                            <picture>
+                                <source srcset="./images/team/desktop/Olha_desktop.webp 1x, ./images/team/desktop/Olha_desktop@2x.webp 2x"
+                                    media="(min-width: 1200px)" type="image/webp">
+                                <source srcset="./images/team/desktop/Olha_desktop.jpg 1x, ./images/team/desktop/Olha_desktop@2x.jpg 2x"
+                                    media="(min-width: 1200px)">
+                                <source srcset="./images/team/tablet/Olha_tablet.webp 1x, ./images/team/tablet/Olha_tablet@2x.webp 2x"
+                                    media="(min-width: 768px)" type="image/webp">
+                                <source srcset="./images/team/tablet/Olha_tablet.jpg 1x, ./images/team/tablet/Olha_tablet@2x.jpg 2x"
+                                    media="(min-width: 768px)">
+                                <source srcset="./images/team/tablet/Olha_mobile.webp 1x, ./images/team/mobile/Olha_mobile@2x.webp 2x"
+                                    media="(max-width: 767px)" type="image/webp">
+                                <source srcset="./images/team/tablet/Olha_mobile.jpg 1x, ./images/team/mobile/Olha_mobile@2x.jpg 2x"
+                                    media="(max-width: 767px)">
+                                <img class="team-member-card__image" src="./images/team/mobile/Olha_mobile.jpg" alt="блондинка в черном пиджаке">
+                            </picture>
                             <div class="team-member-wrapper">
                                 <h3 class="team-members">Ольга Репина</h3>
                                 <p class="member-porofession" lang="en">Frontend Developer</p>
@@ -207,7 +240,22 @@
                     </li>
                     <li class="team-member-card">
                         <div>
-                            <img src="./images/team/Nikolai.jpg" width="270" height="260" alt="Парень в белой рубашке">
+                            <picture>
+                                <source srcset="./images/team/desktop/Nikolai_desktop.webp 1x, ./images/team/desktop/Nikolai_desktop@2x.webp 2x"
+                                    media="(min-width: 1200px)" type="image/webp">
+                                <source srcset="./images/team/desktop/Nikolai_desktop.jpg 1x, ./images/team/desktop/Nikolai_desktop@2x.jpg 2x"
+                                    media="(min-width: 1200px)">
+                                <source srcset="./images/team/tablet/Nikolai_tablet.webp 1x, ./images/team/tablet/Nikolai_tablet@2x.webp 2x"
+                                    media="(min-width: 768px)" type="image/webp">
+                                <source srcset="./images/team/tablet/Nikolai_tablet.jpg 1x, ./images/team/tablet/Nikolai_tablet@2x.jpg 2x"
+                                    media="(min-width: 768px)">
+                                <source srcset="./images/team/tablet/Nikolai_mobile.webp 1x, ./images/team/mobile/Nikolai_mobile@2x.webp 2x"
+                                    media="(max-width: 767px)" type="image/webp">
+                                <source srcset="./images/team/tablet/Nikolai_mobile.jpg 1x, ./images/team/mobile/Nikolai_mobile@2x.jpg 2x"
+                                    media="(max-width: 767px)">
+                                <img class="team-member-card__image" src="./images/team/mobile/Nikolai_mobile.jpg" alt="Парень в белой рубашке">
+                            </picture>
+
                             <div class="team-member-wrapper">
                                 <h3 class="team-members">Николай Тарасов</h3>
                                 <p class="member-porofession" lang="en">Marketing</p>
@@ -245,7 +293,22 @@
                         </div>
                     </li>
                     <li class="team-member-card">
-                        <img src="./images/team/Mikhail.jpg" width="270" height="260" alt="Парень в черной футболке">
+                        <picture>
+                            <source srcset="./images/team/desktop/Mikhail_desktop.webp 1x, ./images/team/desktop/Mikhail_desktop@2x.webp 2x"
+                                media="(min-width: 1200px)" type="image/webp">
+                            <source srcset="./images/team/desktop/Mikhail_desktop.jpg 1x, ./images/team/desktop/Mikhail_desktop@2x.jpg 2x"
+                                media="(min-width: 1200px)">
+                            <source srcset="./images/team/tablet/Mikhail_tablet.webp 1x, ./images/team/tablet/Mikhail_tablet@2x.webp 2x"
+                                media="(min-width: 768px)" type="image/webp">
+                            <source srcset="./images/team/tablet/Mikhail_tablet.jpg 1x, ./images/team/tablet/Mikhail_tablet@2x.jpg 2x"
+                                media="(min-width: 768px)">
+                            <source srcset="./images/team/tablet/Mikhail_mobile.webp 1x, ./images/team/mobile/Mikhail_mobile@2x.webp 2x"
+                                media="(max-width: 767px)" type="image/webp">
+                            <source srcset="./images/team/tablet/Mikhail_mobile.jpg 1x, ./images/team/mobile/Mikhail_mobile@2x.jpg 2x"
+                                media="(max-width: 767px)">
+                            <img class="team-member-card__image" class="team-member__picture" src="./images/team/mobile/Mikhail_mobile.jpg" alt="Парень в черной футболке">
+                        </picture>
+
                         <div class="team-member-wrapper">
                             <h3 class="team-members">Михаил Ермаков</h3>
                             <p class="member-porofession" lang="en">UI Designer</p>
@@ -283,7 +346,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
     <!--CLIENTS-->
         <!-- <section class="section">
             <div class="container">
