add adaptive clients section

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
             </div>
         </section>
     <!--CLIENTS-->
-        <!-- <section class="section">
+        <section class="section">
             <div class="container">
                 <h2 class="title">Постоянные клиенты</h2>
                 <ul class="clients-list list">
@@ -397,7 +397,7 @@
                 </ul>
             </div>
         </section>
-    </main> -->
+    </main>
         <!--FOOTER-->
     <!-- <footer class="footer">
         <div class="container">
