adaptive add footer

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <!-- <header class="header">
+    <header class="header">
         <div class="container">
             <nav class="menu">
                 <a class="link logo" href="index.html"><span class="logo-web-part">Web</span>Studio</a>
@@ -49,7 +49,7 @@
                 </li>
             </ul>
         </div>
-    </header> -->
+    </header>
     <main>
         <!--HERO-->
         <section class="hero">
@@ -399,57 +399,60 @@
         </section>
     </main>
         <!--FOOTER-->
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="container">
-            <div class="internal-links">
-                <a class="link logo logo-footer" href="index.html"><span class="logo-web-part">Web</span>Studio</a>
-                <address class="footer-contacts-list">
-                    <ul class="list">
-                        <li class="footer-contacts-list-item">
-                            <a class="link address" href="https://goo.gl/maps/49gHyc8vdsA3i8d18" rel="noopener noreferrer">г. Киев, пр-т
-                                Леси Украинки, 26</a>
+            <div class="footer__links-container">
+                <div class="internal-links">
+                    <a class="link logo logo-footer" href="index.html"><span class="logo-web-part">Web</span>Studio</a>
+                    <address class="footer-contacts-list">
+                        <ul class="list">
+                            <li class="footer-contacts-list-item">
+                                <a class="link address" href="https://goo.gl/maps/49gHyc8vdsA3i8d18" rel="noopener noreferrer">г. Киев,
+                                    пр-т
+                                    Леси Украинки, 26</a>
+                            </li>
+                            <li class="footer-contacts-list-item">
+                                <a class="link footer-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                            </li>
+                            <li class="footer-contacts-list-item">
+                                <a class="link footer-contacts" href="tel:+380961111111">+38 096 111 11 11</a>
+                            </li>
+                        </ul>
+                    </address>
+                </div>
+                <div class="join-us-links-list">
+                    <h3 class="join-us-caption">Присоединяйтесь</h3>
+                    <ul class="footer-social-links-list list">
+                        <li class="footer-social-link-item">
+                            <a class="footer__social-link social-link link" href="">
+                                <svg class="footer-social-link-icon" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
                         </li>
-                        <li class="footer-contacts-list-item">
-                            <a class="link footer-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <li class="footer-social-link-item">
+                            <a class="footer__social-link social-link link" href="">
+                                <svg class="footer-social-link-icon" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
                         </li>
-                        <li class="footer-contacts-list-item">
-                            <a class="link footer-contacts" href="tel:+380961111111">+38 096 111 11 11</a>
+                        <li class="footer-social-link-item">
+                            <a class="footer__social-link social-link link" href="">
+                                <svg class="footer-social-link-icon" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-social-link-item">
+                            <a class="footer__social-link social-link link" href="">
+                                <svg class="footer-social-link-icon" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
                         </li>
                     </ul>
-                </address>
-            </div>
-            <div class="join-us-links-list">
-                <h3 class="join-us-caption">Присоединяйтесь</h3>
-                <ul class="footer-social-links-list list">
-                    <li class="footer-social-link-item">
-                        <a class="footer__social-link social-link link" href="">
-                            <svg class="footer-social-link-icon" width="20" height="20">
-                                <use href="./images/sprite.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-social-link-item">
-                        <a class="footer__social-link social-link link" href="">
-                            <svg class="footer-social-link-icon" width="20" height="20">
-                                <use href="./images/sprite.svg#icon-twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-social-link-item">
-                        <a class="footer__social-link social-link link" href="">
-                            <svg class="footer-social-link-icon" width="20" height="20">
-                                <use href="./images/sprite.svg#icon-facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-social-link-item">
-                        <a class="footer__social-link social-link link" href="">
-                            <svg class="footer-social-link-icon" width="20" height="20">
-                                <use href="./images/sprite.svg#icon-linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
+                </div>
             </div>
             <div class="subscribe-container">
                 <p class="subscribe-caption">Подпишитесь на рассылку</p>
@@ -466,9 +469,9 @@
                 </form>
             </div>
         </div>
-    </footer> -->
+    </footer>
     <!--Modal-->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <form class="modal-form" action="#">
                 <p class="modal-form-name">Оставьте свои данные, мы вам перезвоним</p>
@@ -508,7 +511,7 @@
                 </svg>
             </button>
         </div>
-    </div> -->
+    </div>
     <script src="./js/modal.js"></script>
 </body>
 </html>
