Проблема с иконкой закрытия моб меню

--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
                 </li>
             </ul>
             </nav>
-            <ul class="contact-list list">
+            <button type="button" class="burger-btn" data-menu-button>
+                <svg class="burger-icon" height="40" width="40">
+                    <use href="./images/sprite.svg#menu_40px"></use>
+                </svg>
+            </button>
+                        <ul class="contact-list list">
                 <li class="header-contact">
                     <a class="header-contacts link" href="mailto:info@devstudio.com">
                     <svg width="16" height="12" class="contact-icons">
@@ -48,6 +53,58 @@
                     +38 096 111 11 11</a>
                 </li>
             </ul>
+            <div class="mobile-menu" data-menu>
+                <button type="button" class="mobile-menu-close-btn" data-menu-close>
+                    <svg class="mobile-menu-close-icon">
+                        <use href="./images/sprite.svg#close_40px" height="40" width="40"></use>
+                    </svg>
+                </button>
+                <ul class="mobile-menu__list  list">
+                    <li class="mobile-menu__item">
+                        <a href="" class="mobile-menu__link">Студия</a>
+                    </li>
+                    <li class="mobile-menu__item">
+                        <a href="" class="mobile-menu__link">Портфолио</a>
+                    </li>
+                    <li class="mobile-menu__item">
+                        <a href="" class="mobile-menu__link">Контакты</a>
+                    </li>
+                </ul>
+                <ul class="mobile-menu__contact-list  list">
+                    <li class="mobile-menu__contact-item">
+                        <a  href="tel:+380961111111" class="mobile-contact__link">
+                            +38 096 111 11 11
+                        </a>
+                    </li>
+                        <li class="mobile-menu__contact-item">
+                            <a href="mailto:info@devstudio.com" class="mobile-contact__link">
+                                info@devstudio.com
+                            </a>
+                        </li>
+                </ul>
+                <ul class="mobile-menu__social-list list">
+                    <li class="mobile-menu__social-list-item">
+                        <a href="#" class="mobile-social-list__link">
+                            Instagram
+                        </a>
+                    </li>
+                    <li class="mobile-menu__social-list-item">
+                        <a href="#" class="mobile-social-list__link">
+                            Twitter
+                        </a>
+                    </li>
+                    <li class="mobile-menu__social-list-item">
+                        <a href="#" class="mobile-social-list__link">
+                            Facebook
+                        </a>
+                    </li>
+                    <li class="mobile-menu__social-list-item">
+                        <a href="#" class="mobile-social-list__link">
+                            LinkedIn
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </header>
     <main>
