adaptive site done

--- a/index.html
+++ b/index.html
@@ -55,51 +55,51 @@
             </ul>
             <div class="mobile-menu" data-menu>
                 <button type="button" class="mobile-menu-close-btn" data-menu-close>
-                    <svg class="mobile-menu-close-icon">
-                        <use href="./images/sprite.svg#close_40px" height="40" width="40"></use>
+                    <svg class="mobile-menu-close-icon" width="40" height="40">
+                        <use href="./images/sprite.svg#close_40px"></use>
                     </svg>
                 </button>
                 <ul class="mobile-menu__list  list">
                     <li class="mobile-menu__item">
-                        <a href="" class="mobile-menu__link">Студия</a>
+                        <a href="./index.html" class="mobile-menu__link-active mobile-menu__link link">Студия</a>
                     </li>
                     <li class="mobile-menu__item">
-                        <a href="" class="mobile-menu__link">Портфолио</a>
+                        <a href="./portfolio.html" class="mobile-menu__link link">Портфолио</a>
                     </li>
                     <li class="mobile-menu__item">
-                        <a href="" class="mobile-menu__link">Контакты</a>
+                        <a href="" class="mobile-menu__link link">Контакты</a>
                     </li>
                 </ul>
                 <ul class="mobile-menu__contact-list  list">
                     <li class="mobile-menu__contact-item">
-                        <a  href="tel:+380961111111" class="mobile-contact__link">
+                        <a href="tel:+380961111111" class="mobile-menu__tel-link link">
                             +38 096 111 11 11
                         </a>
                     </li>
                         <li class="mobile-menu__contact-item">
-                            <a href="mailto:info@devstudio.com" class="mobile-contact__link">
+                            <a href="mailto:info@devstudio.com" class="mobile-menu__mail link">
                                 info@devstudio.com
                             </a>
                         </li>
                 </ul>
                 <ul class="mobile-menu__social-list list">
                     <li class="mobile-menu__social-list-item">
-                        <a href="#" class="mobile-social-list__link">
+                        <a href="#" class="mobile-social-list__link link">
                             Instagram
                         </a>
                     </li>
                     <li class="mobile-menu__social-list-item">
-                        <a href="#" class="mobile-social-list__link">
+                        <a href="#" class="mobile-social-list__link link">
                             Twitter
                         </a>
                     </li>
                     <li class="mobile-menu__social-list-item">
-                        <a href="#" class="mobile-social-list__link">
+                        <a href="#" class="mobile-social-list__link link">
                             Facebook
                         </a>
                     </li>
                     <li class="mobile-menu__social-list-item">
-                        <a href="#" class="mobile-social-list__link">
+                        <a href="#" class="mobile-social-list__link link">
                             LinkedIn
                         </a>
                     </li>
@@ -363,7 +363,7 @@
                                 media="(max-width: 768px)" type="image/webp">
                             <source srcset="./images/team/mobile/Mikhail_mobile.jpg 1x, ./images/team/mobile/Mikhail_mobile@2x.jpg 2x"
                                 media="(max-width: 768px)">
-                            <img class="team-member-card__image" class="team-member__picture" src="./images/team/mobile/Mikhail_mobile.jpg" alt="Парень в черной футболке">
+                            <img class="team-member-card__image" src="./images/team/mobile/Mikhail_mobile.jpg" alt="Парень в черной футболке">
                         </picture>
 
                         <div class="team-member-wrapper">
@@ -570,5 +570,6 @@
         </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
 </body>
 </html>
