--- a/index.html
+++ b/index.html
@@ -70,40 +70,42 @@
                         <a href="" class="mobile-menu__link link">Контакты</a>
                     </li>
                 </ul>
-                <ul class="mobile-menu__contact-list  list">
-                    <li class="mobile-menu__contact-item">
-                        <a href="tel:+380961111111" class="mobile-menu__tel-link link">
-                            +38 096 111 11 11
-                        </a>
-                    </li>
+                <div>
+                    <ul class="mobile-menu__contact-list  list">
                         <li class="mobile-menu__contact-item">
-                            <a href="mailto:info@devstudio.com" class="mobile-menu__mail link">
-                                info@devstudio.com
+                            <a href="tel:+380961111111" class="mobile-menu__tel-link link">
+                                +38 096 111 11 11
                             </a>
                         </li>
-                </ul>
-                <ul class="mobile-menu__social-list list">
-                    <li class="mobile-menu__social-list-item">
-                        <a href="#" class="mobile-social-list__link link">
-                            Instagram
-                        </a>
-                    </li>
-                    <li class="mobile-menu__social-list-item">
-                        <a href="#" class="mobile-social-list__link link">
-                            Twitter
-                        </a>
-                    </li>
-                    <li class="mobile-menu__social-list-item">
-                        <a href="#" class="mobile-social-list__link link">
-                            Facebook
-                        </a>
-                    </li>
-                    <li class="mobile-menu__social-list-item">
-                        <a href="#" class="mobile-social-list__link link">
-                            LinkedIn
-                        </a>
-                    </li>
-                </ul>
+                            <li class="mobile-menu__contact-item">
+                                <a href="mailto:info@devstudio.com" class="mobile-menu__mail link">
+                                    info@devstudio.com
+                                </a>
+                            </li>
+                    </ul>
+                    <ul class="mobile-menu__social-list list">
+                        <li class="mobile-menu__social-list-item">
+                            <a href="#" class="mobile-social-list__link link">
+                                Instagram
+                            </a>
+                        </li>
+                        <li class="mobile-menu__social-list-item">
+                            <a href="#" class="mobile-social-list__link link">
+                                Twitter
+                            </a>
+                        </li>
+                        <li class="mobile-menu__social-list-item">
+                            <a href="#" class="mobile-social-list__link link">
+                                Facebook
+                            </a>
+                        </li>
+                        <li class="mobile-menu__social-list-item">
+                            <a href="#" class="mobile-social-list__link link">
+                                LinkedIn
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </header>
@@ -557,8 +559,8 @@
                 <textarea class="modal-form_textarea" name="coment" id="coment" placeholder="Введите текст"></textarea>
                 <div class="modal-checkbox_line">
                     <input class="therm-checkbox visually-hidden" type="checkbox" id="acceptance" name="acceptanse">
-                    <label class="acceptanse" for="acceptance">Соглашаюсь с рассылкой и принимаю&nbsp;</label>
-                    <a class="terms-link" href="#">Условия договора</a>
+                    <label class="acceptanse" for="acceptance">Соглашаюсь с рассылкой и принимаю&nbsp; <a class="terms-link" href="#">Условия договора</a></label>
+                    <!-- <a class="terms-link" href="#">Условия договора</a> -->
                 </div>
                 <button class="modal-btn" type="submit">Отправить</button>
             </form>
